--- a/src/main/resources/templates/loser.html
+++ b/src/main/resources/templates/loser.html
@@ -20,7 +20,7 @@
 				<br></br>
 					<tr>
 						<td>
-							<h1 class="font-weight-bold text-uppercase text-center" th:text="${namel}" </h1>
+							<h1 class="font-weight-bold text-uppercase text-center" th:text="${nameL}"> </h1>
 						</td>
 					</tr>
 				</table>
@@ -28,8 +28,6 @@
 				<a th:href="@{/gamers/Ranking}" class="btn btn-lg btn-info"> Back</a>
 
     </div>
-  </div>
-</div>
 
 </body>
 
