--- a/src/main/resources/templates/new_gamer.html
+++ b/src/main/resources/templates/new_gamer.html
@@ -9,7 +9,7 @@
 
 <body>
    <div class="container my-4">
-        <h1>DICE GAME/h1>
+        <h1>DICE GAME</h1>
         <hr>
         <h2>Save New User</h2>
 
