--- a/src/main/resources/templates/success.html
+++ b/src/main/resources/templates/success.html
@@ -7,18 +7,16 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 
-<body>
-	<div class="container my-4">
-		<h1>JUEGO DE DADOS</h1>
-		      <hr>
-   <div class="container my-4">
-		<br></br>
-        <h1>Operación Realizada con éxito</h1>
+<div class="container my-4">
+    <h1>DICE GAME</h1>
+    <hr>
+    <div class="container my-4">
         <br></br>
-  
+        <h1>Successfull operation</h1>
+        <br></br>
 
-               <a th:href="@{/Players/}" class="btn btn-lg btn-primary"> Listado Jugadores</a> 
+
+        <a th:href="@{/gamers/}" class="btn btn-lg btn-primary"> Gamers List</a>
     </div>
-</body>
 
 </html>
