--- a/src/main/resources/templates/gamer.html
+++ b/src/main/resources/templates/gamer.html
@@ -8,34 +8,33 @@
 		integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 
-<body>
-	<div class="container my-4">
-		<h1>DICE GAME</h1>
-		      <hr>
-		<div class="row">
-    <div class="col">
-		<h1>GAMER GAMES:   <a th:text = "${gamer.name}" th:object="${gamer}"></a></h1>
-    </div>
+<div class="container my-4">
+	<h1>DICE GAME</h1>
+	<hr>
+	<div class="row">
+		<div class="col">
+			<h1>GAMER GAMES:   <a th:text = "${gamer.name}" th:object="${gamer}"></a></h1>
+		</div>
 		<div class="col d-grid gap-2 d-md-flex justify-content-md-end">
 			<form th:action="@{/gamers/{id}/games (id=${gamer.gamer_id})}" th:object="${gamer}" method="POST">
-		<input type="submit" class="btn btn-lg btn-primary" value="NEW GAME">
-		</form>
-		
-	<form th:action="@{/gamers/{id}/deleteList (id=${gamer.gamer_id})}" th:object="${gamer}">
-		<input type="submit" class="btn btn-lg btn-danger" value="DELETE GAMES">
-	</form>
+				<input type="submit" class="btn btn-lg btn-primary" value="NEW GAME">
+			</form>
+
+			<form th:action="@{/games/{id}/deleteList (id=${gamer.gamer_id})}" th:object="${gamer}">
+				<input type="submit" class="btn btn-lg btn-danger" value="DELETE GAMES">
+			</form>
 		</div>
-	<hr>
-	<table border="1" class="table table-striped table-bordered">
-		<thead class="thead-dark">
+		<hr>
+		<table border="1" class="table table-striped table-bordered">
+			<thead class="thead-dark">
 			<tr>
 				<th>Game Date</th>
 				<th>Dice 1</th>
 				<th>Dice 2</th>
 				<th>Win</th>
 			</tr>
-		</thead>
-		<tbody>
+			</thead>
+			<tbody>
 			<tr th:each="GameDto : ${games}">
 
 				<td th:text="${GameDto.gamedate}"></td>
@@ -43,9 +42,8 @@
 				<td th:text="${GameDto.two}"></td>
 				<td th:text="${GameDto.win}"></td>
 			</tr>
-		</tbody>
-	</table>
-</body>
+			</tbody>
+		</table>
+	</div>
 </div>
-
 </html>
