--- a/src/main/resources/templates/showone.html
+++ b/src/main/resources/templates/showone.html
@@ -3,34 +3,34 @@
 
 <head>
 	<meta charset="ISO-8859-1">
-	<title>JUEGO DE DADOS</title>
+	<title>DICE GAME</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
 		integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 
 <body>
 	<div class="container my-4">
-		<h1>JUEGO DE DADOS</h1>
+		<h1>DICE GAME</h1>
 		      <hr>
 		<div class="row">
     <div class="col">
 	<hr>
-	<h2>ACTUALIZAR DATOS</h2>
+	<h2>UPDATE</h2>
 
-	<form action="#" th:action="@{/Players/update}" th:object="${jugadordto}" method="POST">
+	<form action="#" th:action="@{/gamers/update}" th:object="${gamerdto}" method="POST">
 
-		<input type="hidden" th:field="*{jugador_id}" />
+		<input type="hidden" th:field="*{gamer_id}" />
 
-		<input type="text" th:field="*{nombre}" class="form-control mb-4 col-4">
+		<input type="text" th:field="*{name}" class="form-control mb-4 col-4">
 
 
 
-		<button type="submit" class="btn btn-lg btn-danger"> Actualizar jugador</button>
+		<button type="submit" class="btn btn-lg btn-danger"> Update gamer</button>
 	</form>
 
 	<hr>
 
-	<a th:href="@{/Players/}" class="btn btn-lg btn-primary">Volver al listado</a>
+	<a th:href="@{/gamers/}" class="btn btn-lg btn-primary">Back to List</a>
 	</div>
 </body>
 
