update home 25 nov 2023

--- a/src/main/resources/templates/game.html
+++ b/src/main/resources/templates/game.html
@@ -33,7 +33,7 @@
 					</tr>
 				</thead>
 				<tbody>
-					<tr th:object="${game}">
+					<tr th:object="${GameDto}">
 
 						<td th:text="*{gamedate}"></td>
 						<td th:text="*{one}"></td>
