--- a/src/main/resources/templates/gamer_list.html
+++ b/src/main/resources/templates/gamer_list.html
@@ -20,6 +20,7 @@
 				<div class=class="col d-grid gap-2 d-md-flex justify-content-md-end">
 					<a th:href="@{/gamers/Ranking}" class="btn btn-primary btn-lg mb-3"> Ranking</a>
 				</div>
+
 			</div>
 
 
@@ -28,7 +29,7 @@
 					<tr>
 						<th>gamer_id</th>
 						<th>Name</th>
-						<th>%success</th>
+						<th>% Success</th>
 						<th>Action</th>
 					</tr>
 				</thead>
